--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.112.2"
 uvicorn = "^0.30.6"
 openai = "^1.43.0"
 python-dotenv = "^1.0.1"
+python-multipart = "^0.0.10"
 
 
 [tool.poetry.group.dev.dependencies]
