--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-vega": "^7.6.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
