--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ openai = "^1.43.0"
 python-dotenv = "^1.0.1"
 python-multipart = "^0.0.10"
 pandas = "^2.2.3"
+pandasql = "^0.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
