--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pandasql = "^0.7.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.7"
+pytest = "^8.3.3"
+pytest-xdist = "^3.6.1"
 
 [tool.ruff]
 target-version = "py310"
